# sensor

./: .cproject  .project  CMakeLists.txt  sdkconfig  sdkconfig.old
cert/: ca_cert.pem
components/DHT22/: CMakeLists.txt  DHT22.c
components/DHT22/include/: DHT22.h
components/blynk/: blynk.c
components/blynk/include/: blynk.h
include/: Server_Exchange.h  blynk_management.h  ota.h  wifi.h
main/: CMakeLists.txt  Server_Exchange.cpp  blynk_management.c  ota.cpp  station_example_main.c  station_example_main.cpp
